--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "standard": "^12.0.1"
   },
   "contributors": [
     "David Acconcio <dacconcio@gmail.com>",
