--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "mocha test/*.spec.js",
-    "start:dev": "JWT_SECRET=capstone nodemon index.js"
+    "start:dev": "JWT_SECRET=capstone DATABASE_URL=bolt://localhost:7687/capstone DATABASE_USERNAME=neo4j DATABASE_PASSWORD=capstone SYNC_DB=true nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -26,8 +26,11 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "jwt-simple": "^0.5.5"
+    "faker": "^4.1.0",
+    "jwt-simple": "^0.5.5",
+    "neode": "^0.2.10"
   }
 }
