--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "mocha test/*.spec.js",
-    "start:dev": "JWT_SECRET=capstone DATABASE_URL=bolt://localhost:7687/capstone DATABASE_USERNAME=neo4j DATABASE_PASSWORD=capstone SYNC_DB=true nodemon index.js"
+    "start:dev": "JWT_SECRET=capstone GRAPHENEDB_BOLT_URL=bolt://localhost:7687/capstone GRAPHENEDB_BOLT_USER=neo4j GRAPHENEDB_BOLT_PASSWORD=capstone SYNC_DB=true nodemon index.js"
   },
   "keywords": [],
   "author": "",
