--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "jwt-simple": "^0.5.5",
-    "neode": "^0.2.10"
+    "neode": "^0.2.10",
+    "recipe-ingredient-parser": "^1.5.6"
   }
 }
