--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "firebase-admin": "^6.2.0",
     "jwt-simple": "^0.5.5",
     "neode": "^0.2.10",
     "recipe-ingredient-parser": "^1.5.6"
