--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "firebase-admin": "^6.2.0",
     "jwt-simple": "^0.5.5",
     "neode": "^0.2.10",
+    "nodemailer": "^4.7.0",
     "recipe-ingredient-parser": "^1.5.6"
   }
 }
