--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "clarifai": "^2.9.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "faker": "^4.1.0",
