--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "filereader": "^0.10.3",
     "firebase-admin": "^6.2.0",
     "jwt-simple": "^0.5.5",
     "neode": "^0.2.10",
